@@ -8,10 +8,10 @@ import java.io.OutputStreamWriter;
 import java.net.InetSocketAddress;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.net.SocketException;
 import java.nio.charset.StandardCharsets;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 
 import br.ufrn.imd.message.HttpMessage;
 
@@ -26,27 +26,41 @@ public class ServerRequestHandler {
 	public ServerRequestHandler(int port, Invoker invoker) {
 		this.invoker = invoker;
 		this.marshaller = new Marshaller();
-		this.execService = Executors.newCachedThreadPool();
+		this.execService = Executors.newVirtualThreadPerTaskExecutor();
 		start(port);
 		System.out.println("Server started on port " + port);
 		acceptConnections();
 	}
 	
 	public void start(int port) {
-		try {
-			this.servSocket = new ServerSocket();
-			//this.servSocket.setReuseAddress(true);
-			this.servSocket.bind(new InetSocketAddress(port));
-		} catch (Exception e) {
-			handleError(e);
-		}
+		int maxRetries = 3;
+        int retryDelay = 2000;
+        for (int i = 0; i < maxRetries; i++) {
+            try {
+                this.servSocket = new ServerSocket();
+                this.servSocket.setReuseAddress(true);
+                this.servSocket.bind(new InetSocketAddress(port));
+                return;
+            } catch (IOException e) {
+                handleError(e);
+                if (i == maxRetries - 1) {
+                    System.err.println("Failed to bind to port after " + maxRetries + " retries. Exiting...");
+                    System.exit(1);
+                }
+                System.out.println("Retrying to bind to port " + port + "...");
+                try {
+                    TimeUnit.MILLISECONDS.sleep(retryDelay);
+                } catch (InterruptedException ie) {
+                    Thread.currentThread().interrupt();
+                }
+            }
+        }
 	}
 	
 	public void acceptConnections() {
 		while(isRunning) {
 			try {
 				Socket clientSocket = servSocket.accept();
-                //clientSocket.setKeepAlive(true);
                 System.out.println("Connection accepted: " + clientSocket.getRemoteSocketAddress());
 				execService.execute(() -> handleRequest(clientSocket));
 	        } catch (IOException IOe) {
@@ -59,28 +73,15 @@ public class ServerRequestHandler {
 	}
 	
 	private void handleRequest(Socket clientSocket) {
-		try {
-	        clientSocket.setSoTimeout(5000);
-	        try (BufferedReader reader = new BufferedReader(new InputStreamReader(clientSocket.getInputStream()));
-	             BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(clientSocket.getOutputStream()))) 
-	        {
-	            HttpMessage request = readRequest(clientSocket, reader);
-	            HttpMessage response = invoker.invoke(request);
-	            sendResponse(response, writer);
-	        } catch (Exception e) {
-	            String errorResponse = RemotingError.handleError(e);
-	            HttpMessage errorHttpMessage = RemotingError.createErrorHttpMessage(errorResponse, "ERROR", "response");
-	            try (BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(clientSocket.getOutputStream()))) {
-	                sendResponseWithErrorHandling(errorHttpMessage, writer);
-	            } catch (IOException IOe) {
-	                handleError(IOe);
-	            }
-	        } finally {
-	            closeSocket(clientSocket);
-	        }
-	    } catch (SocketException Se) {
-	        handleError(Se);
-	    }
+		try (clientSocket){
+			BufferedReader reader = new BufferedReader(new InputStreamReader(clientSocket.getInputStream()));
+			BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(clientSocket.getOutputStream()));
+			HttpMessage request = readRequest(clientSocket, reader);
+            HttpMessage response = invoker.invoke(request);
+            sendResponse(response, writer);
+		} catch(Exception e) {
+			handleSocketError(clientSocket, e);
+		}
 	}
 	
 	private HttpMessage readRequest(Socket clientSocket, BufferedReader reader) throws IOException {
@@ -98,6 +99,20 @@ public class ServerRequestHandler {
 		writer.flush();
 	}
 	
+	private void handleSocketError(Socket clientSocket, Exception e) {
+	    System.err.println("Error handling request: " + e.getMessage());
+	    String errorResponse = RemotingError.handleError(e);
+	    HttpMessage errorHttpMessage = RemotingError.createErrorHttpMessage(errorResponse, "ERROR", "response");
+
+	    try (BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(clientSocket.getOutputStream()))) {
+	        sendResponseWithErrorHandling(errorHttpMessage, writer);
+	    } catch (IOException ioException) {
+	        System.err.println("Failed to send error response: " + ioException.getMessage());
+	        ioException.printStackTrace();
+	    }
+	}
+
+	
 	private void sendResponseWithErrorHandling(HttpMessage errorHttpMessage, BufferedWriter writer) {
         try {
             sendResponse(errorHttpMessage, writer);
@@ -106,15 +121,17 @@ public class ServerRequestHandler {
         }
 	}
 	
-	private void closeSocket(Socket clientSocket) {
-		try {
-			//System.out.println("closed the socket");
-            clientSocket.close();
-        } catch (IOException e) {
-        	//System.out.println("failed to close");
-            handleError(e);
-        }
-	}
+	/*private void closeSocket(Socket clientSocket) {
+		if (clientSocket != null && !clientSocket.isClosed()) {
+			try {
+				System.out.println("closed the socket");
+	            clientSocket.close();
+	        } catch (IOException e) {
+	        	System.out.println("failed to close");
+	            handleError(e);
+	        }
+		}
+	}*/
 	
 	private void handleError(Exception e) {
 		String errorResponse = RemotingError.handleError(e);
